<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/drawerLayout"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<!-- bigScreen contains schedule and on large screens possibly an event dialog. -->
	<LinearLayout
		android:id="@+id/bigScreen"
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<RelativeLayout
			android:id="@+id/viewerContainer"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
            android:layout_weight="3">
			<!-- Actual schedule viewer goes in here (which one depends on setting). And day change buttons. -->
		</RelativeLayout>
	</LinearLayout>

	<RelativeLayout
		android:id="@+id/drawer"
		android:layout_width="240dp"
		android:layout_height="match_parent"
		android:layout_gravity="start"
		android:background="#CFD8DC"> <!-- material-blue-grey-100, how to ref? -->

		<LinearLayout
			android:id="@+id/header"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">

			<TextView
				android:id="@+id/date_range"
				style="@style/BurgerMenuHeader"
				android:text="FANCY DATE RANGE"/>

		</LinearLayout>

		<ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/header"
            android:id="@+id/scrollView">

			<LinearLayout
                android:id="@+id/menu"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <!-- choose views -->
                <TextView
                    android:id="@+id/block_schedule"
                    style="@style/BurgerMenuItem"
                    android:text="@string/block_schedule"/>

                <TextView
                    android:id="@+id/now_next"
                    style="@style/BurgerMenuItem"
                    android:text="@string/now_next"/>

                <TextView
                    android:id="@+id/timetable"
                    style="@style/BurgerMenuItem"
                    android:text="@string/timetable"/>

                <TextView
                    android:id="@+id/tracks"
                    style="@style/BurgerMenuItem"
                    android:text="@string/tracks"/>

                <TextView
                    android:id="@+id/my_events"
                    style="@style/BurgerMenuItem"
                    android:text="@string/my_events"/>

                <View
                    style="@style/BurgerMenuSeparator" />

                <!-- links specific to currently viewed event. Optional, filled in by code. -->

                <View
                    android:id="@+id/custom_sep"
                    style="@style/BurgerMenuSeparator"
                    android:visibility="gone" />

                <!-- misc -->
                <TextView
                    android:id="@+id/change_day"
                    style="@style/BurgerMenuItem"
                    android:text="@string/change_day"/>

                <TextView
                    android:id="@+id/show_hidden"
                    style="@style/BurgerMenuItem"
                    android:text="@string/show_hidden"/>

				<View
					style="@style/BurgerMenuSeparator" />

				<TextView
					android:id="@+id/home_shortcut"
					style="@style/BurgerMenuItem"
					android:text="@string/home_shortcut"/>

				<TextView
					android:id="@+id/export_selections"
					style="@style/BurgerMenuItem"
					android:text="@string/export_selections"/>

                <TextView
                    android:id="@+id/settings"
                    style="@style/BurgerMenuItem"
                    android:text="@string/settings"/>
            </LinearLayout>
		</ScrollView>
	</RelativeLayout>
</android.support.v4.widget.DrawerLayout>
